delete social share button

--- a/live.html
+++ b/live.html
@@ -45,7 +45,7 @@
           <h1><a href="index.html"><span class="logo-text-left">C</span>  A  <span class="logo-text-right">M</a></h1>
             
             <a href="index.html" class="left-arrow "></a>
-            <a href="#" class="ui-button-action" onclick="window.plugins.socialsharing.share(' Cerddoriaeth orau amgen Cymraeg a thrysorau coll o barthau brasiog tramor. / Obscure Welsh language music and unheard pleasures from further afield.', 'Sioe Byw / Live Show', 'images/live.png', 'https://itunesconnect.apple.com/WebObjects/iTunesConnect.woa/ra/ng/app/960265766')"></a>
+            <!--<a href="#" class="ui-button-action" onclick="window.plugins.socialsharing.share(' Cerddoriaeth orau amgen Cymraeg a thrysorau coll o barthau brasiog tramor. / Obscure Welsh language music and unheard pleasures from further afield.', 'Sioe Byw / Live Show', 'images/live.png', '')"></a>-->
             <a href="#mypanel" class="ui-btn  ui-btn-right"></a>
              
         </div>
