--- a/pages/shows/latest.html
+++ b/pages/shows/latest.html
@@ -45,8 +45,8 @@
            <h1><a href="../../index.html"><span class="logo-text-left">C</span>  A  <span class="logo-text-right">M</a></h1>
             
              <a href="../../index.html" class="left-arrow "></a>
-             <a href="#" class="ui-button-action" onclick="window.plugins.socialsharing.share(' Cerddoriaeth orau amgen Cymraeg a thrysorau coll o barthau brasiog tramor. / Obscure Welsh language music and unheard pleasures from further afield.', 'SIOE CAM 067', 'http://www.peski.co.uk/sites/default/files/imagecache/peski_blog_inline_image/post/images/cam_071.png', 'https://itunesconnect.apple.com/WebObjects/iTunesConnect.woa/ra/ng/app/960265766')"></a>
-             <a href="#mypanel" class="ui-btn  ui-btn-right"></a>
+             <!--<a href="#" class="ui-button-action" onclick="window.plugins.socialsharing.share(' Cerddoriaeth orau amgen Cymraeg a thrysorau coll o barthau brasiog tramor. / Obscure Welsh language music and unheard pleasures from further afield.', 'SIOE CAM 067', 'http://www.peski.co.uk/sites/default/files/imagecache/peski_blog_inline_image/post/images/cam_071.png', '')"></a>
+             <a href="#mypanel" class="ui-btn  ui-btn-right"></a>-->
              
         </div>
 
