--- a/about.html
+++ b/about.html
@@ -144,9 +144,9 @@
 
             <ul>
              
-                <li class="left-logo"><a href="http://wales.gov.uk/splash?orig=/"  onClick="window.open('http://wales.gov.uk/splash?orig=/', '_self', 'location=yes'); return false;"><img src="images/assembly-logo.jpg"  width="130px" height="40px" /></a></li>
-                <li class="center-logo"><a href="http:www.peski.co.uk"  onClick="window.open('http:www.peski.co.uk', '_self', 'location=yes'); return false;"><img src="images/peski-logo.png"   /></a></li>
-                <li><a href="http://www.hobostation.co.uk"  onClick="window.open('http://www.hobostation.co.uk', '_self', 'location=yes'); return false;"><img src="images/hobo-logo.png"  width="65px" height="65px" /></a></li>
+                <li class="left-logo"><a href="http://wales.gov.uk/splash?orig=/"  onClick="window.open('http://wales.gov.uk/splash?orig=/', '_blank', 'location=yes'); return false;"><img src="images/assembly-logo.jpg"  width="130px" height="40px" /></a></li>
+                <li class="center-logo"><a href="http:www.peski.co.uk"  onClick="window.open('http:www.peski.co.uk', '_blank', 'location=yes'); return false;"><img src="images/peski-logo.png"   /></a></li>
+                <li><a href="http://www.hobostation.co.uk"  onClick="window.open('http://www.hobostation.co.uk', '_blank', 'location=yes'); return false;"><img src="images/hobo-logo.png"  width="65px" height="65px" /></a></li>
             </ul>
             </div>
        </div>
@@ -194,7 +194,7 @@
          <script type="text/javascript" src="/js/cordova.js"></script>
     	<script type="text/javascript" src="/js/jquery-1.9.1.js"></script>
        	<script type="text/javascript" src="/js/jquery.mobile-1.4.4.js"></script>
-        <script type="text/javascript" src="/phonegap.js"></script>
+       
         <script type="text/javascript" src="/js/index.js"></script>
          <script type="text/javascript">
             app.initialize();
