--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="css/jquery.mobile.icons-1.4.4.css" />
         <link rel="stylesheet" href="css/jquery.mobile.structure-1.4.4.css" />
         <link rel="stylesheet" href="css/main.css" />
-        <script type="text/javascript" src="js/cordova.js"></script>
+        <script type="text/javascript" src="cordova.js"></script>
     
            
           <title>CAM Radio Application</title>
